[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "RepoToPrompt"
version = "1.0.0"
description = "Convert a repository to a single prompt-friendly text file."
requires-python = ">=3.8"
dependencies = [
    "rich>=12.0.0",
]

[project.scripts]
RepoToPrompt = "RepoToPrompt.cli:main"